style.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');

:root {
  --purple: #6070ff;
  --mainFont: 'Poppins', sans-serif;
}

html {
  box-sizing: border-box;
  font-family: var(--mainFont);
  font-size: 62.5%;
}

html,
body {
  padding: 0;
  margin: 0;
}

*,
*::before,
*::after {
  box-sizing: inherit;
}

header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  max-width: 85%;
  margin: 0 auto;
}

header p,
nav {
  font-size: 2rem;
  color: var(--purple);
}

header p {
  font-weight: 700;
}

.hero {
  background-image: url('./img/hero.png');
  background-repeat: no-repeat;
  background-size: cover;
  height: 63.5rem;
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.hero h1 {
  font-size: 4rem;
  font-weight: 700;
  margin-bottom: 0.5px;
}

.hero-text p {
  font-size: 2rem;
  line-height: 30px;
  font-weight: 300;
  margin-top: 5px;
  color: #344563;
}

.container {
  max-width: 80%;
  margin: 0 auto;
}

.hero-text h1 {
  text-align: left;
  color: #172b4d;
}

.hero-text span {
  color: var(--purple);
  font-size: 2rem;
}

a {
  text-decoration: none;
  color: var(--purple);
}

.social-media {
  list-style: none;
  padding-left: 0;
  display: flex;
  gap: 2.5rem;
}

.social-media li img {
  height: 20px;
}

.cards-container {
  background-color: #e5e5e5;
  padding: 11rem 1.5rem;
  display: grid;
  grid-template-rows: repeat(3, 1fr);
  gap: 12rem;
}

.card {
  background-color: white;
  padding: 2.5rem 1.5rem;
  border-radius: 25px;
  display: flex;
  flex-direction: column;
  border: 1px solid #dfe1e6;
}

.card-image {
  width: 100%;
}

.card h2 {
  color: var(--black);
  font-size: 3.2rem;
  margin: 1rem 0;
}

.tags {
  display: flex;
  align-items: center;
  gap: 0.7rem;
}

.bullet {
  width: 6px;
}

.tags p {
  color: var(--black);
  font-weight: 700;
}

.tags span {
  color: #7a869a;
}

.description {
  color: #344563;
  font-size: 1.6rem;
}

.technologies {
  list-style: none;
  padding-left: 0;
  gap: 1rem;
}

.technologies li {
  background-color: #ebebff;
  padding: 0.8rem;
  color: #6070ff;
  border-radius: 8px;
  font-size: 1.2rem;
  float: left;
  text-align: center;
  margin: 0.2rem;
}

.card button {
  color: #396df2;
  border: 2px solid #396df2;
  background-color: white;
  border-radius: 8px;
  padding: 1rem;
  flex: none;
}

.about-content button {
  color: #396df2;
  border: 2px solid #396df2;
  background-color: white;
  border-radius: 8px;
  padding: 1rem;
  margin-top: 2rem;
}

.card button:hover {
  color: #fff;
  background: #6070ff;
  border-radius: 8px;
}

.card button:active {
  color: #fff;
  background: #2230d2;
  border-radius: 8px;
}

.card button:disabled {
  border: 1px solid #c1c7d0;
  border-radius: 8px;
  color: #5e6c84;
  flex: none;
  order: 0;
  flex-grow: 0;
}

.about {
  background-color: #e5e5e5;
}

.about-content {
  background-color: white;
  border-radius: 0 80px 0 0;
  padding: 11rem 1rem;
}

.about-content h2 {
  margin-top: 0;
  color: var(--black);
  font-size: 4rem;
}

.about-content p {
  color: #344563;
  font-size: 1.7rem;
}

.about-content span {
  color: var(--purple);
  font-size: 2rem;
}

.languages {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-top: 2.5rem;
}

.languages h3 {
  font-size: 2rem;
}

.language {
  display: flex;
  align-items: center;
  gap: 1rem;
  padding: 1rem;
  background-color: #f7f7f9;
  border-radius: 10px;
  margin-bottom: 1.3rem;
}

.language-img {
  height: 50px;
}

.contact {
  width: 375px;
  border: 2px solid #fff;
  border-top-left-radius: 75px;
  color: white;
  background-color: #6070ff;
  background-image: url("./img/contact_form_mobile.png");
  background-repeat: no-repeat;
  background-size: cover;
  display: flex;
  flex-direction: column;
  justify-content: center;
  left: 328px;
}

.contact-div {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  width: 375px;
  height: 870px;
}

.div-content {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 375px;
  height: 870px;
}

.contact-h1 {
  margin-top: 103px;
  font-family: 'Poppins', sans-serif;
  font-style: normal;
  font-weight: 700;
  font-size: 40px;
  line-height: 52px;
  text-align: center;
  align-items: center;
  color: #fff;
}

.contact-text p {
  width: 327px;
  height: 102px;
  font-family: 'Poppins', sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 20px;
  line-height: 28px;
  text-align: center;
  color: #ebebff;
  margin: 50px;
}

.form {
  display: flex;
  flex-direction: column;
  align-items: center;
  height: 330px;
  width: 327px;
  gap: 24px;
}

.form-fieldset {
  padding: 45px;
}

.form fieldset input,
textarea {
  height: 48px;
  width: 327px;
  font-size: 15px;
  font-weight: 400;
  line-height: 24px;
  text-align: left;
  color: #6b778c;
  padding: 15px 16px;
  background: #fff;
  border: 1px solid #cfd8dc;
  border-radius: 8px;
}

.form fieldset textarea {
  width: 327px;
  height: 170px;
}

.form fieldset {
  border: 0;
}

textarea:focus .form fieldset input {
  outline: none;
}

.button {
  padding: 12px;
  gap: 10px;
  width: auto;
  height: auto;
  bottom: 8px;
  border-radius: 4px;
  color: #6070ff;
  background: #fff;
  font-family: "Inter", sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 17px;
  line-height: 24px;
  text-align: left;
  letter-spacing: 0.03em;
  border: 0;
  align-self: flex-start;
  margin: inherit;
  margin-top: -55px;
}

.button:hover {
  color: #fff;
  background: #6070ff;
  border-radius: 8px;
}

.button:active {
  color: #fff;
  background: #2230d2;
  border-radius: 8px;
}

.button:disabled {
  border: 1px solid #c1c7d0;
  border-radius: 8px;
  color: #5e6c84;
  flex: none;
  order: 0;
  flex-grow: 0;
}

